# rocs-copilot

./: .env.example  .gitignore  CLAUDE.md  README.md  STATUS.md  activate.bat  auto_version.py  digest_fedex-global-economic-report-summary.md  fedex-global-economic-report-summary.docx  fedex-global-economic-report-summary.md  git-commit.bat  gitinfo.md  key-notes.md  pyproject.toml  rag_test.bat  start.bat  summerizer.bat
.article_cache/: articles_bfbdb90e70448916bf3880f85c138c7b.json
.github/workflows/: test.yml
backend/: __init__.py  app.py  start_interactive_chat.py
backend/api/: INTERACTIVE_CHAT_GUIDE.md  __init__.py  chat_state.py  chat_state_repository.py  init_chat.py  init_state.py  interactive_chat.py  routes.py
backend/doc_loader/: __init__.py  doc_importer.py  document_repository.py  grade_docs.py  load_url.py
backend/initialize_app/: config.py  create_app.py  register_bluprints.py
backend/models/: __init__.py
backend/tools/: __init__.py  news_summarizer.py  register_tools.py  translate.py
backend/utils/: deserialization.py  draw_graph.py  dynamic_model_selector.py  email_sample.py  http_client.py  initialize_logger.py  ssl_verification.py
brand/: Executive Briefing Template June 2023.docx  charts_and_graphs_template.pptx  global-maps-template.pptx  logistics_email_mastheads_011321.pptx  sample.pptx
digests/: digest_fedex-global-economic-report-summary.md  fedex-global-economic-report-summary.md
doc_loader/: doc_importer.py  document_repository.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  app.module.css
mmd/: news_workflow.mmd
rag-output/annual-report/: annual-fin-summary.docx  annual-fin-summary.md  digest_annual-fin-summary.docx  digest_annual-fin-summary.md
rag-output/article-summerizer/: article-summerizer-opus.docx  article-summerizer-opus.md  article-summerizer-opus.txt  digest_article-summerizer-opus.docx  digest_article-summerizer-opus.md
rag-output/fdx-glbl-eco-ai-report/: digest_or-ai-llm-article.docx  digest_or-ai-llm-article.md  or-ai-llm-article.docx  or-ai-llm-article.md
rag-output/or-ai-llm-article/: or-ai-llm-article.docx  or-ai-llm-article.md
rag-output/or-ai-llm-mck-summary/: or-ai-llm-mck-summary.docx  or-ai-llm-mck-summary.md
rag-output/ortec-letus-talk-ai/: article-summerizer-haiku.txt  article-summerizer-opus.txt
rag-output/sme-survey/: digest_fedex-sme-survey-summary.docx  digest_fedex-sme-survey-summary.md  fedex-sme-survey-summary.docx  fedex-sme-survey-summary.md
scripts/: ingest.py
src/rocs_copilot_backend/: app.py  config.py
tests/: conftest.py  test_chunker.py  test_cli_ingest.py  test_config.py  test_loader.py  test_provider_factory.py  test_rag_chain.py  test_routes_chat.py  test_routes_health.py  test_store.py
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  theme.ts
(+81 files in other folders)
