[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocs-copilot"
version = "0.1.0"
description = "FedEx ROCS chatbot copilot — RAG over operations manuals for ground-ops planners."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "rocs-copilot maintainers" }]
dependencies = [
  "flask>=3.0,<4.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "python-dotenv>=1.0,<2.0",
  "tenacity>=8.2,<9.0",
  "langchain>=0.3,<0.4",
  "langchain-openai>=0.2,<0.3",
  "langchain-groq>=0.2,<0.3",
  "langchain-community>=0.3,<0.4",
  "langchain-chroma>=0.1,<0.2",
  "chromadb>=0.5,<0.6",
  "pypdf>=4.0,<5.0",
  "docx2txt>=0.8,<0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "reportlab>=4.0,<5.0",
  "python-docx>=1.1,<2.0"
]

[project.scripts]
rocs-ingest = "scripts.ingest:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["rocs_copilot_backend*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src", "."]
